[Misc] Improve test by fixing violations and using List.of()/Map.of() instead of Arrays.asList() and Collections.singletonMap()